Bug 13864: Fix height for Colvis entries
On the late orders page, the "Show/hide columns" displays the "estimated
delivery date" is a litle bit to long and overflows between 2 lines.

This patch fixes the height to 100%.

Test plan:
Go on the late orders page and confirm the "estimeated delivery date"
entry is correctly displayed.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/datatables.colvis.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/datatables.colvis.css
@@ -46,6 +46,7 @@ div.ColVis_collection {
 div.ColVis_collection button.ColVis_Button {
 	background-color: white;
 	width: 100%;
+	height: 100%;
 	float: none;
 	margin-bottom: 2px;
 }
